--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,13 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-title: coder life 
-email: smileboywtu@gmail.com 
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://smileboywtu.github.io" # the base hostname & protocol for your site
-twitter_username: smileboywtu 
-github_username:  smileboywtu 
+title: Coder Life
+email: smileboywtu@gmail.com
+description: >
+    welcome to the site of smile boy, I'm a student under graduate.
+    I like python and java program language. One world life:
+    "I hate it, but I love it."
+baseurl: ""
+url: "http://smileboywtu.github.io"
+github_username:  smileboywtu
 
 # Build settings
 markdown: kramdown
